# mt-leaderboard

./: .env.example  README.md  api_example.py  pyproject.toml
mt_leaderboard/: api.py  client.py  endpoints.py  examples.py  exceptions.py
mt_leaderboard/data/: card_ids.json  clan_ids.json  collectable_relic_ids.json  covenant_ids.json  mutator_ids.json  relic_ids.json  trial_ids.json  upgrade_ids.json
mt_leaderboard/data/constants_trainworks2/: VanillaCardIDs.cs  VanillaCardPoolIDs.cs  VanillaCardUpgradeDataIDs.cs  VanillaCharacterIDs.cs  VanillaRelicIDs.cs  VanillaRewardIDs.cs  VanillaSubtypeIDs.cs
mt_leaderboard/models/: challenge.py  gamerun.py  leaderboard.py
mt_leaderboard/utils/: constants_parse_card.py  constants_parse_collectable_relic.py  constants_parse_relic.py  constants_parse_trial.py  constants_parse_upgrade.py  constantsparse_mutator.py  dl_constants.py  parse_clan.py  parse_covenant.py  parse_ids.py  tmp_parse_ids.py
mt_leaderboard/utils/constants/: VanillaChallengeIDs.cs  VanillaClanIDs.cs  VanillaCollectableRelicIDs.cs  VanillaCovenentIDs.cs  VanillaEnhancerIDs.cs  VanillaEnhancerPoolIDs.cs  VanillaMapNodeIDs.cs  VanillaMapNodePoolIDs.cs  VanillaMutatorIDs.cs  VanillaRelicPoolIDs.cs  VanillaScenarioIDs.cs  VanillaSinsIDs.cs  VanillaStatusEffectIDs.cs  VanillaStoryCharacterIDs.cs  VanillaStoryEventIDs.cs  VanillaTrialIDs.cs
