[tool.poetry]
name = "mt-leaderboard"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
eventemitter = "^0.2.0"
httpx = "^0.27.0"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pydantic = "^2.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
